hiding contact webform

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -50,4 +50,4 @@ block content
               tr
                 td(colspan=2)
                   p
-                    button(id='submit') Submit
+                    //button(id='submit') Submit
