--- a/views/contact.jade
+++ b/views/contact.jade
@@ -19,7 +19,7 @@ block content
         a(href="mailto:frederictonfunsoftball@gmail.com") FrederictonFunSoftball@gmail.com
     li
       p Webform
-        form(action='/contact/submit',method='post')
+        /*form(action='/contact/submit',method='post')
           fieldset
             table(border=0)
               tr
@@ -50,4 +50,5 @@ block content
               tr
                 td(colspan=2)
                   p
-                    //button(id='submit') Submit
+                    button(id='submit') Submit
+*/
