--- a/views/contact.jade
+++ b/views/contact.jade
@@ -19,36 +19,35 @@ block content
         a(href="mailto:frederictonfunsoftball@gmail.com") FrederictonFunSoftball@gmail.com
     li
       p Webform
-        /*form(action='/contact/submit',method='post')
-          fieldset
-            table(border=0)
-              tr
-                td
-                  p Name:
-                td
-                  input(name='name')
-              tr
-                td
-                  p Email Address:
-                td
-                  input(name='email')
-              tr
-                td
-                  P Request Type
-                td
-                  select(name='requestType')
-                    option Request for info
-                    option Comments/Suggestions
-                    option Sign up a team
-                    option Sign up an individual
-                    option other
-              tr
-                td
-                  p Comment/Suggestion
-                td
-                  textarea(name='body')
-              tr
-                td(colspan=2)
-                  p
-                    button(id='submit') Submit
-*/
+//        form(action='/contact/submit',method='post')
+//          fieldset
+//            table(border=0)
+//              tr
+//                td
+//                  p Name:
+//                td
+//                  input(name='name')
+//              tr
+//                td
+//                  p Email Address:
+//                td
+//                  input(name='email')
+//              tr
+//                td
+//                  P Request Type
+//                td
+//                  select(name='requestType')
+//                    option Request for info
+//                    option Comments/Suggestions
+//                    option Sign up a team
+//                    option Sign up an individual
+//                    option other
+//              tr
+//                td
+//                  p Comment/Suggestion
+//                td
+//                  textarea(name='body')
+//              tr
+//                td(colspan=2)
+//                  p
+//                    button(id='submit') Submit
