removed recent games code

--- a/views/rightPanel.jade
+++ b/views/rightPanel.jade
@@ -18,7 +18,7 @@ br
 p
   | Upcoming Games:
   hr
-  each nextGame in nextGames
-    div#recentGames
-      p #{nextGame.fieldName} - #{nextGame.dateTime}
-      p #{nextGame.awayName} vs. p #{nextGame.homeName}
+  //each nextGame in nextGames
+  //  div#recentGames
+  //    p #{nextGame.fieldName} - #{nextGame.dateTime}
+  //    p #{nextGame.awayName} vs. p #{nextGame.homeName}
