updated LeagueRules and schedule defect

--- a/views/leagueRules.jade
+++ b/views/leagueRules.jade
@@ -6,10 +6,12 @@ block content
   h2 League Rules
   hr
   p(align="right")
-    | Last Update: May 2015
+    | Last Update: May 2016
   h3 Table of Contents
   div#TOC
     ul
+      li
+        a(href="leagueRules#newFor2016") New For 2016
       li
         a(href="leagueRules#general") General
       li
@@ -54,6 +56,25 @@ block content
               a(href="leagueRules#hittingRulesBatting") Batting
             li
               a(href="leagueRules#hittingRulesBaseRunning") Base Running
+  h3 New for 2016
+    a(id="newFor2016")
+  hr
+  p
+    ul
+      li
+        a(href="leagueRules#2016-14Teams") League expanded to 14 teams
+      li
+        a(href="leagueRules#2016-3Divisions") 3 Division League Format
+      li
+        a(href="leagueRules#2016-waivers") Waivers
+      li
+        a(href="leagueRules#2016-homeruns") Home runs
+      li
+        a(href="leagueRules#2016-walks") Walks
+      li
+        a(href="leagueRules#2016-runningThroughFirst") Running through first base
+      li
+        a(href="leagueRules#2016-outsAtFirst") Throwing to first base
   h3 General
     a(id="general")
   hr
@@ -62,6 +83,24 @@ block content
     | in which case the rules must be followed. The idea is to give the league structure and make it safe and fair for everyone to play.
     | Discussions on whether rules are being followed is to be discussed between captains, who will then agree on how to proceed at
     | that time so the game can continue.
+  p
+    a(id="2016-14Teams")
+    | <b>** New for 2016 **</b>
+  p
+    | The league as expanded to include 2 new teams and is has 14 teams participating.
+  p
+    a(id="2016-3Divisions")
+    | <b>** New for 2016 **</b>
+  p
+    | The league will now be split into 3 divisions and what teams you will be playing against will be determined by what division you
+    | are in.
+    ul
+      li
+        | A Division - Teams will play 2/3 of their games against A Division, and the remaining games against the B Division.
+      li
+        | B Division - Teams will play 1/3 of their games against A Division, B Division and C Division.
+      li
+        | C Division - Teams will play 2/3 of their games against C division, and the remaining games against the B Division.
   h3 General Rules
     a(id="generalRules")
   hr
@@ -78,6 +117,11 @@ block content
   h3 Players
     a(id="players")
   hr
+  p
+    a(id="2016-waivers")
+    | <b>** New for 2016 **</b>
+  p
+    | All players are now required to sign the team roster/wavier form in order to be allowed to play in the league.
   p
     | While this is a fun league for everyone, players do assume some risk when stepping on the field. Players should be able to reasonably
     | protect themselves from a ball hit towards them. It is the responsibility of the team captain to ensure that a player is not placed
@@ -111,6 +155,8 @@ block content
     | Due to safety concerns, only flight restricted balls will be used in the league. Teams have agreed that Worth Gray Dot softballs (12")
     | will be the preferred ball (available at McTavish's Source for Sports for $~75/dozen). The home team is expected to supply 1 new
     | ball as well as 1 or 2 decent balls for every home game.
+    | There is no requirement for a specific color of ball to be used, but most teams are moving to yellow balls to aid visibility of the
+    | ball.
   h3 Bats
     a(id="bats")
   hr
@@ -136,14 +182,13 @@ block content
     | batters, team captains should not place anyone in the pitching position who cannot protect themselves from abatted ball at that
     | position. There is substantially less time to react.
     | With regard to Arc and Pitchers location, while outlined formally below, are at the discretion of the teams playing. A pitcher can
-    | stand farther back (for safety reasons), or throw pitches that are higher than 12feet (minimum safety reasons), or throw pitches
-    | that are higher than 12feet (minimum 6feet is a strict rule for a called strike) provided they can consistently throw strikes. If
-    | these adjustments lead to a pitcher not being able to throw strikes consistently and keep the game moving along, they the below rules
-    | must be followed.
+    | stand farther back (for safety reasons), or throw pitches that are higher than 12 feet (minimum 6 feet is a strict rule for a
+    | called strike) provided they can consistently throw strikes. If these adjustments lead to a pitcher not being able to throw
+    | strikes consistently and keep the game moving along, they the below rules must be followed.
   h4 Arc
     a(id="pitchingRulesArc")
   p
-    | There is a 6feet minimum arc the ball must reach on the way to the plate for it to be called a strike. Balls pitched less than 6 feet
+    | There is a 6 feet minimum arc the ball must reach on the way to the plate for it to be called a strike. Balls pitched less than 6 feet
     | will be declared no pitch after the catcher is in possession of the ball. A batter may swing, at their discretion, at any ball pitched.
     | If a batter swings at a ball that would have been declared a no pitch ball, the pitch is considered legal and the strike/foul ball/hit
     | will stand.
@@ -174,6 +219,11 @@ block content
     | Teams are not allowed to play more than 4 outfielders (3 if there is no rover) and 4 infielders (not counting the pitcher and catcher).
     | The rover and all outfielders must stand in the grass before every play begins. Infielders can stand on the grass provided it is for
     | safety reasons and not to put more fielders in the outfield.
+  p
+    a(id="2016-outsAtFirst")
+    | <b>** New for 2016 **</b>
+  p
+    | Only infielders will be allowed to throw to first base with the intention of making an out.
   h4 Catcher
     a(id="fieldingRulesCatcher")
   p
@@ -193,16 +243,39 @@ block content
   p
     | The batting order must be ordered such that at no time there are 3 guys batting in a row. The exception to this rule is at the bottom
     | of the lineup. When wrapping from the bottom to the top of the batting order, 3 guys can bat in a row.
-    | When a home run is hit, any runners on the bases will advance to home and score. The person who hit the home run must stop at second base.
+  p
+    a(id="2016-homeruns")
+    | <b>** New for 2016 **</b>
+  p
+    | Home runs are no longer only doubles and the batter, and any base runners, will score as expected.
+  p
+    a(id="2016-+3rule")
+    | <b>** New for 2016 **</b>
+  p
+    | Teams will only be allowed to hit 3 more home runs than the opposing team (+3 rule). If a team hits a home run that would cause them to
+    | have 4 homeruns more than the opposing team, the batter will immediately be declared out and runners cannot advance. Females are exempt
+    | from this rule and their homeruns do not count towards the +3 rule.
+  p
     | For ground rule doubles, the batter will proceed to second base. If there was a runner on first, they will proceed to third base. Any
     | other runners score as normal. If a ball does bounce over the fence, goes under, or goes between the opening in some fields, the
     | outfielder should immediately signal that it is only a ground rule double.
+  p
     | If a batter has 2 strikes on them, and then hits a foul ball over one of the foul fences, the batter will be declared out. The batter
     | is not declared out if the ball goes foul but remains in the field.
+  p
     | The batter will only be out on a foul tip caught by the catcher if the ball reached a minimum of 6 feet after the ball is contacted by
     | the bat and before being caught.
+  p
     | A strike will be called if the batter swings and misses, or if the ball contacts the home plate or strike mat.
-    | Balls will not be kept track of and there are no walks.
+  p
+    a(id="2016-walks")
+    | <b>** New for 2016 **</b>
+  p
+    | Walks will now be included in the league. A batter must take 6 balls in order for a walk to be declared. If a batter is walked they
+    | shall take first base and any base runners will advance only if they are required to (ie. A walk occurs with runners on first and third,
+    | the runner on first will advance to second but the runner on third will not advance to home). If a walk occurs and the next batter is a
+    | female, the female has the option to walk as well or bat as they normally would.
+  p
     | An Infield fly (A fly ball where an infielder has a reasonable chance to make the catch, with runners on first and second, or first
     | second and third with less than 2 out) will be shouted by the umpire. At this time the batter will be
     | out and runners do not have to advance. They can advance at their own risk.
@@ -212,8 +285,17 @@ block content
     | Courtesy runners can be used for injured players and must be declared to the fielding team. A courtesy runner must be the same sex as
     | the batter and be immediately above the batter in the batting order (unless they are on a base, in which case the next available player
     | will be used).
+  p
     | Sliding is permitted in the league, but is strongly discouraged. Players are only to slide to avoid a collision. If the intent was to
     | break up a play, or significant contact was made to disrupt a play, the runner will be called out.
-    | Runners are high encouraged not to touch home plate. For a runner to score they only have to cross the first base foul line that is
+  p
+    | Runners are highly encouraged not to touch home plate. For a runner to score they only have to cross the first base foul line that is
     | extended to the fence. A runner who touches home plate will not be called out, unless they make contact with the catcher and interferes
     | with a play being made.
+  p
+    a(id="2016-runningThroughFirst")
+    | <b>** New for 2016 **</b>
+  p
+    | If a runner running to first base see that the first basemen is incorrectly covering first base and a collision is likely, they
+    | have the option to run past first without touching first base. The umpire should use their judgement and make the call based on whether
+    | they felt the runner would have been safe has they touched the base.
