--- a/views/leftPanel.jade
+++ b/views/leftPanel.jade
@@ -17,7 +17,7 @@ ul
   li
     a(class='navLink', href='/contact') Contact
 if(typeof user != 'undefined')
-  if user[0].role == "admin"
+  if role == "admin"
     div
       br
       p Admin Links
@@ -31,7 +31,7 @@ if(typeof user != 'undefined')
           a(class='navLink', href='/manage/schedule') Schedule
         li
           a(class='navLink', href='/manage/seasons') Seasons
-  if user[0].role == "admin" || user[0].role == "manager"
+  if role == "admin"
     div
       br
       p Manager Links
